--- a/styles/styles.css
+++ b/styles/styles.css
@@ -68,7 +68,12 @@ ul {
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: #2E2F42;
+        transition-property: color;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
 }
+
 .menu-link:hover,
 .menu-link:focus {
     color: var(--accent-color);
@@ -84,6 +89,9 @@ ul {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .address:hover,
 .address:focus {
@@ -133,6 +141,9 @@ ul {
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
         border-radius: 4px;
         margin-top: 48px;
+        transition-property: background-color;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-btn:hover,
 madal-btn:focus {
@@ -209,6 +220,9 @@ color: #FFFFFF;
         display: flex;
         justify-content: center;
         align-items: center;
+        transition-property: background-color;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .team-soc-link:hover,
 .team-soc-link:focus {
@@ -251,6 +265,9 @@ color: #FFFFFF;
 .icon-top-list {
         width: 104px;
         height: 56px;
+        transition-property: fill;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .icon-link {
         width: 100%;
@@ -261,6 +278,9 @@ color: #FFFFFF;
          display: flex;
         justify-content: center;
         align-items: center;
+        transition-property: border-color;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .customers-list {
         gap: 24px;
@@ -322,6 +342,9 @@ color: #FFFFFF;
         align-items: center;
         padding: 12px 24px;
         background-color: #F4F4FD;
+        transition-property: background-color, color, border-color;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modals-btn:hover,
@@ -391,6 +414,30 @@ img {
 }
 .menu {
         gap: 40px;
+}
+
+.menu-link {
+        position: relative;
+       
+}
+
+
+.menu-link.current {
+        position: relative;
+        color: var(--accent-color);
+}
+
+.menu-link.current::after {
+        position: absolute;
+        left: 0;
+        top: 43px;
+        content: "";
+        width: 100%;
+        height: 4px;
+        display: block;
+        background-color: #404bbf;
+        border-radius: 2px;
+        pointer-events: none;
 }
 .features-top-list {
         display: flex;
@@ -483,10 +530,43 @@ img {
 }
 .card-item {
         display: block;
+        transition-property: box-shadow;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .card-item:hover,
 .card-item:focus {
         box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.card-item-img-wrapper {
+        position: relative;
+        overflow: hidden;
+}
+
+.overlay {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        padding-top: 40px;
+        padding-right: 32px;
+        padding-left: 32px;
+        padding-bottom: 164px;
+        background-color: #4D5AE5 ;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 24px;
+        letter-spacing: 0.02em;
+        color: #F4F4FD;
+        transform: translate(0, 100%);
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
+}
+
+.card-item:hover .overlay,
+.card-item:focus .overlay {
+        transform: translate(0,0);
 }
 
 
@@ -516,8 +596,82 @@ width: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
+        transition-property: background-color;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .team-icon:hover,
 .team-icon:focus {
         background-color: #31D0AA }
 
+        /* =================MODAL-WINDOW======================*/
+
+.backdrop {
+position: fixed;
+z-index: 100;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+background: rgba(46, 47, 66, 0.4);
+transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}  
+
+
+
+.backdrop.is-hidden .modal {
+transform: translate(-50%, -50%) scaleX(0);
+}
+
+.backdrop.is-hidden {
+        opacity: 0;
+        visibility: hidden;
+        pointer-events: none;
+
+}
+
+.modal {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 408px;
+        height: 526px;
+        background: #FCFCFC;
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+        border-radius: 4px;
+        transform: translate(-50%, -50%) scaleX(1);
+        transition: 250ms linear;
+}
+
+.modal-close-btn {
+      position: absolute;
+      top: 24px;
+      right: 24px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #E7E9FC; 
+      border: 1px solid rgba(0, 0, 0, 0.1);
+      padding: 0;
+      width: 24px;
+      height: 24px;
+      border-radius: 50%;
+      transition-duration: 250ms;
+       transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close-btn:hover > .btn-close,
+.modal-close-btn:focus > .btn-close {
+        fill: #FFFFFF;
+}
+.modal-close-btn:hover {
+        background-color: #404BBF;
+
+}
+.modal-close-btn:focus {
+        background-color: #404BBF;
+
+}
+
+        /* ================= /MODAL-WINDOW======================*/
